--- a/linux-inotify.cabal
+++ b/linux-inotify.cabal
@@ -6,7 +6,7 @@ license:             BSD3
 license-file:        LICENSE
 author:              Leon P Smith
 maintainer:          leon@melding-monads.com
-copyright:           (c) 2013 Leon P Smith
+copyright:           (c) 2013-2014 Leon P Smith
 category:            System
 build-type:          Simple
 cabal-version:       >=1.8
