--- a/linux-inotify.cabal
+++ b/linux-inotify.cabal
@@ -45,9 +45,9 @@ cabal-version:       >=1.8
 library
   hs-source-dirs:      src
   exposed-modules:     System.Linux.Inotify
-  build-depends:       base, unix, bytestring
+  build-depends:       base >= 4 && < 5, unix, bytestring
 
-  ghc-options: -Wall -O
+  ghc-options: -Wall
 
 source-repository head
   type:     git
