--- a/linux-inotify.cabal
+++ b/linux-inotify.cabal
@@ -45,7 +45,10 @@ cabal-version:       >=1.8
 library
   hs-source-dirs:      src
   exposed-modules:     System.Linux.Inotify
-  build-depends:       base >= 4 && < 5, unix, bytestring
+  build-depends:       base >= 4 && < 5,
+                       bytestring >= 0.9,
+                       hashable >= 1.1.2,
+                       unix
 
   ghc-options: -Wall
 
