--- a/linux-inotify.cabal
+++ b/linux-inotify.cabal
@@ -1,5 +1,5 @@
 name:                linux-inotify
-version:             0.3.0.1
+version:             0.3.0.2
 synopsis:            Thinner binding to the Linux Kernel's inotify interface
 description:
     This is a binding for GHC 7 to the Linux Kernel's inotify interface,
@@ -40,10 +40,11 @@ maintainer:          leon@melding-monads.com
 copyright:           (c) 2013-2015 Leon P Smith
 category:            System
 build-type:          Simple
-cabal-version:       >=1.8
+cabal-version:       1.18
 Extra-Doc-Files:     CHANGES.md
 
 library
+  default-language:    Haskell2010
   hs-source-dirs:      src
   exposed-modules:     System.Linux.Inotify
   build-depends:       base >= 4.7 && < 5,
